[gd_scene load_steps=13 format=3 uid="uid://cbfokpod2i55h"]

[ext_resource type="Script" path="res://chey/Game.gd" id="1_e0p6v"]
[ext_resource type="FontFile" uid="uid://bdvljcad73a63" path="res://chey/fonts/plex_mono_28.tres" id="1_q34yp"]
[ext_resource type="Script" path="res://chey/input/Input.gd" id="1_yo6lk"]
[ext_resource type="Script" path="res://chey/CommandProcessor.gd" id="2_3lrur"]
[ext_resource type="Script" path="res://chey/Player.gd" id="2_rqjkp"]
[ext_resource type="PackedScene" uid="uid://bjxq2gn64le60" path="res://chey/rooms/GameRoom.tscn" id="3_4cv05"]
[ext_resource type="Script" path="res://chey/rooms/RoomManager.gd" id="3_vy8n6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4dj5n"]
bg_color = Color(0.0470588, 0.0470588, 0.0470588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rl3jm"]
bg_color = Color(0.164706, 0.164706, 0.164706, 1)
border_color = Color(0.0470588, 0.0470588, 0.0470588, 1)
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ugmq6"]
bg_color = Color(0.25098, 0.25098, 0.25098, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3srrx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2sefp"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e0p6v")

[node name="Player" type="Node" parent="."]
script = ExtResource("2_rqjkp")

[node name="CommandProcessor" type="Node" parent="."]
script = ExtResource("2_3lrur")

[node name="RoomManager" type="Node" parent="."]
script = ExtResource("3_vy8n6")

[node name="TerminalRoom" parent="RoomManager" instance=ExtResource("3_4cv05")]
offset_left = 7.0
offset_top = -909.0
offset_right = -756.0
offset_bottom = -1357.0
room_name = "terminal"
room_description = "You are in a Terminal. Terminal puzzle. "

[node name="StackRoom" parent="RoomManager" instance=ExtResource("3_4cv05")]
offset_left = 412.0
offset_top = -912.0
offset_right = -351.0
offset_bottom = -1360.0
room_name = "stack"
room_description = "Stack (Path) Puzzle."

[node name="HeapRoom" parent="RoomManager" instance=ExtResource("3_4cv05")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 832.0
offset_top = -909.0
offset_right = 1221.0
offset_bottom = -709.0
grow_horizontal = 1
grow_vertical = 1
room_name = "heap"
room_description = "Stack puzzle."

[node name="TextRoom" parent="RoomManager" instance=ExtResource("3_4cv05")]
offset_left = 1236.0
offset_top = -921.0
offset_right = 473.0
offset_bottom = -1369.0
room_name = "text"
room_description = "Text puzzle."

[node name="CodeRoom" parent="RoomManager" instance=ExtResource("3_4cv05")]
offset_left = 1661.0
offset_top = -917.0
offset_right = 898.0
offset_bottom = -1365.0
room_name = "code"
room_description = "Code puzzle"

[node name="CooperRoom" parent="RoomManager" instance=ExtResource("3_4cv05")]
offset_left = 2129.0
offset_top = -920.0
offset_right = 1366.0
offset_bottom = -1368.0
room_name = "cooper 1"
room_description = "Save Cooper Puzzle."

[node name="Cooper2Room" parent="RoomManager" instance=ExtResource("3_4cv05")]
offset_left = 2976.0
offset_top = -941.0
offset_right = 2213.0
offset_bottom = -1389.0
room_name = "cooper 2"
room_description = "cooper 2 room with duckie"

[node name="HintRoom" parent="RoomManager" instance=ExtResource("3_4cv05")]
offset_left = 2139.0
offset_top = -677.0
offset_right = 1376.0
offset_bottom = -1125.0
room_name = "hint.txt"
room_description = "hint room"

[node name="BashRoom" parent="RoomManager" instance=ExtResource("3_4cv05")]
offset_left = 2548.0
offset_top = -674.0
offset_right = 1785.0
offset_bottom = -1122.0
room_name = "bash_profile"
room_description = "bash room"

[node name="ExitRoom" parent="RoomManager" instance=ExtResource("3_4cv05")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 3432.0
offset_top = -933.0
offset_right = 3821.0
offset_bottom = -733.0
grow_horizontal = 1
grow_vertical = 1
room_name = "exit"
room_description = "exit room"

[node name="CodeShRoom" parent="RoomManager" instance=ExtResource("3_4cv05")]
offset_left = 2965.0
offset_top = -671.0
offset_right = 2202.0
offset_bottom = -1119.0
room_name = "code.sh"
room_description = "'01000010 01000001 01010010 01000110'"

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4dj5n")

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="GameInfo" type="PanelContainer" parent="Background/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_rl3jm")

[node name="Scroll" type="ScrollContainer" parent="Background/MarginContainer/Rows/GameInfo"]
layout_mode = 2
follow_focus = true

[node name="HistoryRows" type="VBoxContainer" parent="Background/MarginContainer/Rows/GameInfo/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Rows"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ugmq6")

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/Rows/InputArea"]
layout_mode = 2

[node name="Caret" type="Label" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_q34yp")
theme_override_font_sizes/font_size = 28
text = " > "

[node name="Input" type="LineEdit" parent="Background/MarginContainer/Rows/InputArea/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_q34yp")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxEmpty_3srrx")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2sefp")
max_length = 48
script = ExtResource("1_yo6lk")

[connection signal="text_submitted" from="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" to="." method="_on_input_text_submitted"]
[connection signal="text_submitted" from="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" to="Background/MarginContainer/Rows/InputArea/HBoxContainer/Input" method="_on_text_submitted"]
